
name:               comb
version:            0.5
cabal-version:      >= 1.10
author:             Hans Hoglund
maintainer:         Hans Hoglund <hans@hanshoglund.se>
license:            BSD3
license-file:       COPYING
synopsis:           To be written
category:           
tested-with:        GHC
build-type:         Simple

description:
    To be written.

source-repository head
    type:               git
    location:           git://github.com/hanshoglund/comb.git

library
    build-depends:
        base            >= 4 && < 5,
        portaudio       == 0.2.3,
        hsndfile        == 0.7.1,
        semigroups,
        contravariant
    hs-source-dirs:     src
    default-language:   Haskell2010
    ghc-options:        -O3 -threaded
    exposed-modules:
        Sound.Comb

executable "test-comb"
    build-depends:
        base            >= 4 && < 5,
        portaudio       == 0.2.3,
        hsndfile        == 0.7.1,
        semigroups,
        contravariant
    hs-source-dirs:     src
    default-language:   Haskell2010
    ghc-options:        -O3 -threaded
    main-is:            TestComb.hs
